# modern_cpp_examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clang_compilation.txt  template_main.cpp
.github/workflows/: codeql.yml
01_cplusplus/: CMakeLists.txt  main.cpp
02_auto/: CMakeLists.txt  main.cpp
03_range_for/: CMakeLists.txt  main.cpp
04_right_angle_brackets/: CMakeLists.txt  main.cpp
05_control_of_defaults_default_and_delete/: CMakeLists.txt  a.out  main.cpp
06_control_of_defaults_move_and_copy/: CMakeLists.txt  main.cpp
07_enum_class/: CMakeLists.txt  main.cpp
08_constexpr/: CMakeLists.txt  main.cpp
3th_party_examples/: CMakeLists.txt
3th_party_examples/thread/: CMakeLists.txt  call_once.cpp  get_id.cpp  simple.cpp
MapAndSet/: CMakeLists.txt
MapAndSet/common/: Utils.h
MapAndSet/example_01/: CMakeLists.txt  MyBeautifulObject.cpp  MyBeautifulObject.h  example_01.cpp  example_01_1.cpp  example_01_2.cpp
MapAndSet/example_02/: CMakeLists.txt  LessOnMyObjectIdentifiable.h  MyObjectIdentifiable.cpp  MyObjectIdentifiable.h  example_02.cpp  example_02_1.cpp
MapAndSet/example_03/: CMakeLists.txt  example_03.cpp
XX_01_regex/: main.cpp
c++11/: CMakeLists.txt
c++11/01_cplusplus/: CMakeLists.txt  main.cpp
c++11/02_auto/: CMakeLists.txt  main.cpp
c++11/03_range_for/: CMakeLists.txt  main.cpp
c++11/04_right_angle_brackets/: CMakeLists.txt  main.cpp
c++11/05_control_of_defaults_default_and_delete/: CMakeLists.txt  main.cpp
c++11/06_control_of_defaults_move_and_copy/: CMakeLists.txt  main.cpp
c++11/07_enum_class/: CMakeLists.txt  main.cpp
c++11/08_constexpr/: CMakeLists.txt  main.cpp
c++11/09_begin_end/: CMakeLists.txt  main.cpp
c++11/10_reference_wrapper/: CMakeLists.txt  main.cpp
c++11/11_new_containers/: CMakeLists.txt  main.cpp
c++11/12_tuple_and_tie/: CMakeLists.txt  main.cpp
c++11/13_chrono/: CMakeLists.txt  main.cpp
c++11/14_smart_ptr/: CMakeLists.txt  main.cpp
c++11/15_thread/: CMakeLists.txt  main.cpp
c++11/MapAndSet/: CMakeLists.txt
c++11/MapAndSet/common/: Utils.h
c++11/MapAndSet/example_01/: CMakeLists.txt  MyBeautifulObject.cpp  MyBeautifulObject.h  example_01.cpp  example_01_1.cpp  example_01_2.cpp
c++11/MapAndSet/example_02/: CMakeLists.txt  LessOnMyObjectIdentifiable.h  MyObjectIdentifiable.cpp  MyObjectIdentifiable.h  example_02.cpp  example_02_1.cpp
c++11/MapAndSet/example_03/: CMakeLists.txt  example_03.cpp
c++14/: CMakeLists.txt
c++14/01_lambda_improvement/: CMakeLists.txt  main.cpp
c++14/02_auto_improvement/: CMakeLists.txt  main.cpp
c++14/03_variable_template/: CMakeLists.txt  main.cpp
c++17/: CMakeLists.txt
c++17/01_template_argument_deduction/: CMakeLists.txt  main.cpp
c++17/02_folding_expression/: CMakeLists.txt  main.cpp
c++17/03_structured_bindings/: CMakeLists.txt  main.cpp
c++17/04_variant_optional_any/: CMakeLists.txt  main.cpp
c++17/05_string_view/: CMakeLists.txt  main.cpp
c++17/06_math_utils/: CMakeLists.txt  main.cpp
c++20/: CMakeLists.txt
c++20/01_coroutines/: CMakeLists.txt  main.cpp
c++20/02_concepts/: CMakeLists.txt  main.cpp
c++20/03_designated_initializers/: CMakeLists.txt  main.cpp
c++20/04_template_lambda/: CMakeLists.txt  main.cpp
c++20/05_range_based_for_loop_with_initializer/: CMakeLists.txt  main.cpp
c++20/06_likely_unlikely/: CMakeLists.txt  main.cpp
c++20/07_constexpr_virtual_function/: CMakeLists.txt  main.cpp
c++20/08_consteval_constinit/: CMakeLists.txt  main.cpp
c++20/09_synch_out_buffer/: CMakeLists.txt  main.cpp
c++20/10_span/: CMakeLists.txt  main.cpp
corso/: CMakeLists.txt
corso/Example_01/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
doc/: Presentazione_13_09_29.odp
